SCFOOT-161 Fix collapsed menu in admin panel

--- a/client/main.scss
+++ b/client/main.scss
@@ -19,3 +19,4 @@
 @import "{}/imports/ui/stylesheets/admin.scss";
 @import "{}/imports/ui/stylesheets/enrolls-table.scss";
 @import "{}/imports/ui/stylesheets/calendar.scss";
+@import "{}/imports/ui/stylesheets/sidebar-admin.scss";
