--- a/imports/ui/stylesheets/base.scss
+++ b/imports/ui/stylesheets/base.scss
@@ -5,6 +5,7 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 .section{
     padding-top: 45px;
